--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Your Course – Home</title>
+ <title>Acquihiring in India: A Complete Guide – Home</title>
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
   <header class="topbar">
     <div class="brand">
       <div class="brand__logo" aria-hidden="true"></div>
-      <div class="brand__title">Your Course</div>
+   <div class="brand__title">Acquihiring in India: A Complete Guide</div>
     </div>
     <nav class="navlinks">
       <a href="./index.html">Home</a>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="footer-meta">
-          <span>© <span id="y"></span> Your Brand</span>
+         <div class="brand__title">Acquihiring in India: A Complete Guide</div>
           <a href="#">Back to top</a>
         </div>
       </footer>
